fixed some elements not centered correctly, added padding to footer

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -121,6 +121,7 @@ body, html {
 	display: block;
 	padding: ;
 
+
 }
 
 .leaderBoard {
@@ -181,18 +182,26 @@ body, html {
 
 .topFiveFrame {
 	/*border: 1px solid black;*/
-	width: 820px;
+	width: 786px;
 	margin: 0 auto;
 }
 
 /*//////////////////////////////////////////////////////////////////*/
 		/* LEADERBOARD LIST CSS */
 /*//////////////////////////////////////////////////////////////////*/
- 
+ .color1 {
+	background-color: rgba(163,166,163,0.7);
+	}
+
+.color2 {
+	background-color: rgba(163,166,163,0.4);
+
+}
+
 .lbContainer {
-	width: 708px;
+	width: 1090px;
 	margin: 5px auto;
-	padding: 4px;
+	padding: 2px;
 	border-radius: 2px;
 	background-color: rgba(67,67,67,1);
 }
@@ -209,7 +218,7 @@ body, html {
 	width: 705px;
 	height:;
 	overflow: auto ;
-	background-color: rgb(44,34,54);
+	/*background-color: rgb(44,34,54);*/
   	border-top: solid rgb(61, 52, 72) 4px;
   	border-bottom: solid rgb(30, 30, 30) 4px;
   	margin: 0 auto;
@@ -289,6 +298,7 @@ progress[value]::-webkit-progress-value {
   height: 30px;
   width: 1090px;
   margin: 5px auto;
+  padding: 2px;
  background-color: rgb(0,71,121);
 }
 
@@ -302,6 +312,7 @@ progress[value]::-webkit-progress-value {
 	font-size: 1.3em;
 	font-family: 'akashiregular';
 	text-align: center;
+	color: #fff;
 
 }
 
